feat: 수련회 세부 카테고리 조회 시 포스터, 기간 정보 추가 및 최신순 정렬
PostSubCategoryResponse에 imageUrl, startDate, endDate 필드를 추가하고
시작일 기준 내림차순 정렬을 적용하여 수련회 세부 카테고리 API를 고도화한다.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>